--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -29,7 +29,7 @@ jobs:
       run: mkdir -p deploy
 
     - name: Copy Jar
-      run: cp ./api/build/libs/*.jar ./deploy
+      run: cp ./build/libs/*.jar ./deploy
 
     - name: Make zip file
       run: zip -r ./deploy.zip ./deploy
