--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -31,6 +31,12 @@ jobs:
     - name: Copy Jar
       run: cp ./build/libs/*.jar ./deploy
 
+    - name: Copy appspec.yml
+      run: cp appspec.yml ./deploy
+
+    - name: Copy script
+      run: cp ./scripts/deploy.sh ./deploy
+
     - name: Make zip file
       run: zip -r ./deploy.zip ./deploy
       shell: bash
@@ -44,3 +50,9 @@ jobs:
 
     - name: Upload to S3
       run: aws s3 cp --region ap-northeast-2 ./deploy.zip s3://$S3_BUCKET_NAME/
+
+    - name: Deploy
+      env:
+        AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
+        AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+      run: aws deploy create-deployment --application-name demo-deploy --deployment-group-name demo-deploy-group --file-exists-behavior OVERWRITE --s3-location bucket=demo-bucket-0419,bundleType=zip,key=deploy.zip --region ap-northeast-2
